<resources>
    <string name="app_name">They Chat</string>
    <string name="multithreading_13_1">13.1 多线程</string>
    <string name="btn_handler_message_text">消息传递</string>
    <string name="return_mainthread">回到主线程</string>
    <string name="work_manager_text">工作管理器</string>
    <string name="http_access_text">13.2 HTTP访问</string>
    <string name="json_convert_text">JSON串转换</string>
    <string name="okhttp_call_text">接口调用</string>
    <string name="okhttp_download_text">文件下载</string>
    <string name="okhttp_upload_text">文件上传</string>
    <string name="image_load_text">13.3 图片加载</string>
    <string name="glide_simple_text">glide简单用法</string>
    <string name="glide_cache_text">glide运用缓存</string>
    <string name="image_special_text">加载特殊图像</string>
    <string name="timely_conversation_text">13.4 即时通信</string>
    <string name="timely_conversation_text_text">即时通信(文本)</string>
    <string name="timely_conversation_image_text">即时通信(图片)</string>
    <string name="websocket_text">WebSocket</string>
    <string name="many_people_text">13.5 实战项目：多人聊天</string>
    <string name="they_chat_text">仿微信的私聊和群聊</string>
    <string name="start_broadcast_news_text">开始播放新闻</string>
    <string name="stop_broadcast_news_text">停止播放新闻</string>
    <string name="once_work_text">启动一次性工作</string>
    <string name="period_work_text">启动周期性工作</string>
    <string name="ui_thread_start_broadcast_news_text">开始播放新闻</string>
    <string name="ui_thread_stop_broadcast_news_text">停止播放新闻</string>
    <string name="origin_json_str_text">原始JSON串</string>
    <string name="convert_json_str_text">转换JSON串</string>
    <string name="display_json_convert_text">这里查看JSON串的构造和解析结果</string>
    <string name="okhttp_call_get_text">GET方式</string>
    <string name="okhttp_call_post_text">表单POST</string>
    <string name="okhttp_call_json_post_text">JSON POST</string>
    <string name="okhttp_call_username_text">用户名：</string>
    <string name="okhttp_call_input_username_text">请输入用户名</string>
    <string name="okhttp_call_password_text">密　码：</string>
    <string name="okhttp_call_input_password_text">请输入密码</string>
    <string name="okhttp_call_call_text">发起接口调用</string>
    <string name="okhttp_upload_username_text">用户名：</string>
    <string name="okhttp_upload_input_username_text">请输入用户名</string>
    <string name="okhttp_upload_password_text">密　码：</string>
    <string name="okhttp_upload_input_password_text">请输入密码</string>
    <string name="okhttp_upload_avatar_text">头　像：</string>
    <string name="okhttp_upload_register_text">注册</string>
    <string name="okhttp_download_image_text">下载图片</string>
    <string name="okhttp_download_file_text">下载文件</string>
    <string name="enable_bitmap_text">是否启用占位图</string>
    <string name="enable_error_image_text">是否启用出错图</string>
    <string name="loading_image_text">是否加载原图片</string>
    <string name="ck_transition_text">是否呈现渐变动画</string>
    <string name="sp_cache_strategy_text">缓存策略：</string>
    <string name="btn_download_text">下载网络图片</string>
    <string name="ck_fitxy_text">是否填满整个视图</string>
    <string name="sp_show_mode_text">显示方式：</string>
    <string name="btn_gif_text">加载动图</string>
    <string name="btn_local_cover_text">加载本地视频</string>
    <string name="btn_network_one_text">网络视频(10秒处)</string>
    <string name="btn_network_nine_text">网络视频(45秒处)</string>
    <string name="et_input_text">请输入聊天内容</string>
    <string name="btn_send_text">发送文本消息</string>
    <string name="btn_choose_text">请选择待发送的图片</string>
    <string name="socket_io_image_btn_send_text">发送图片消息</string>
    <string name="input_et_name_text">请输入您的昵称</string>
    <string name="et_name_text">请输入昵称</string>
    <string name="btn_login_text">登　录</string>
    <string name="web_socket_et_input_text">请输入消息文本</string>
    <string name="web_socket_btn_send_text">发送WebSocket消息</string>
    <string name="rb_friend_text">好友</string>
    <string name="rb_group_text">群聊</string>
    <string name="rb_my_text">我的</string>
    <string name="friend_chat_et_input_text">请输入聊天内容</string>
    <string name="friend_chat_btn_send_text">发　送</string>
    <string name="group_chat_et_input_text">请输入聊天内容</string>
    <string name="group_chat_btn_send_text">发　送</string>
    <string name="dialog_et_input_text">请输入</string>
    <string name="dialog_tv_cancel_text">取　消</string>
    <string name="dialog_tv_confirm_text">确　定</string>
    <string name="myinfo_avatar_text">头像</string>
    <string name="iv_portrait_text"><![CDATA[>]]></string>
    <string name="tv_nick_text">昵称</string>
    <string name="myinfo_nick_text"><![CDATA[>]]></string>
</resources>